force-app/main/default/objects/Form_Response__c/fields/Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Response_JSON__c</fullName>
    <description>JSON containing all form field responses</description>
    <label>Response JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>