force-app/main/default/objects/Form_Response__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Date and time of form submission</description>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>