force-app/main/default/objects/Form_Response__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who submitted the form</description>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>