force-app/main/default/objects/Form_Response__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <description>ID of the record created in the target object (if applicable)</description>
    <label>Target Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>